--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <!-- aqui es donde se renderiza el componente principal del proyecto -->
+  <!-- es el SELECTOR de app.component.ts -->
+  <!-- Indica que debe pintar el app.component.html declarado en el @component -->
   <app-root></app-root>
 </body>
 </html>
